# adventofcode

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: automerge.yml  tox.yml
day7/: day7_part1.py  day7_part1_2.py
day8/: day8_part1.py
src/: __main__.py  main.py
src/adventofcode/: main.py
src/adventofcode2016/: day01.py  day02.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  main.py
src/adventofcode2018/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day16.py
src/adventofcode2019/: day01.py  day02.py  day04.py  day05.py  day07.py  day08.py  day09.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  infi.py  intcode.py
src/adventofcode2020/: day01.py  day02.py  day03.py  day04.py  day05.py  day07.py  day08.py  day12.py  day14.py  day15.py  day16.py  handheld.py  main.py
src/adventofcode2021/: day01.py  day02.py  day03.py  day04.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day22.py  main.py
src/adventofcode2022/: day01.py  day02.py  day03.py  day04.py  day05.py  day07.py  day08.py  day09.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day22.py  main.py
src/adventofcode2023/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py
src/adventofcode2024/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  infi.py
src/adventofcode2025/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py
src/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day16.py
src/utils/: abstract.py
template/: cookiecutter.json
template/hooks/: pre_gen_project.py
test/: test_day01.py
tests/: conftest.py  test_advent_utils.py  test_day01.py  test_day01_a.py  test_graph.py  test_node.py  test_point.py  test_priority_queue.py  test_queue.py  test_stack.py
tests/adventofcode2016/: test_day01_a.py  test_day01_b.py  test_day02_a.py  test_day02_b.py  test_day03_a.py  test_day03_b.py  test_day04_a.py  test_day04_b.py  test_day05_a.py  test_day05_b.py  test_day06_a.py  test_day06_b.py  test_day07_a.py  test_day07_b.py  test_day08_a.py  test_day08_b.py  test_day09_a.py  test_day09_b.py  test_day10_a.py  test_day10_b.py  test_day11_a.py  test_day11_b.py  test_day12_a.py  test_day12_b.py  test_day13_a.py  test_day13_b.py  test_day14_a.py  test_day14_b.py  test_day15_a.py  test_day15_b.py  test_day16_a.py  test_day16_b.py  test_day17_a.py  test_day17_b.py  test_day18_a.py  test_day18_b.py  test_day19_a.py  test_day19_b.py  test_day20_a.py  test_day20_b.py  (+4 more)
tests/adventofcode2018/: test_day01_a.py  test_day01_b.py  test_day02_a.py  test_day02_b.py  test_day03_a.py  test_day03_b.py  test_day04_a.py  test_day04_b.py  test_day05_a.py  test_day05_b.py  test_day06_a.py  test_day06_b.py  test_day07_a.py  test_day07_b.py  test_day08_a.py  test_day08_b.py  test_day09_a.py  test_day09_b.py  test_day10_a.py  test_day10_b.py  test_day11_a.py  test_day11_b.py  test_day12_a.py  test_day12_b.py  test_day13_a.py  test_day13_b.py  test_day14_a.py  test_day14_b.py  test_day16_a.py  test_day16_b.py
tests/adventofcode2019/: test_day01_a.py  test_day01_b.py  test_day02_a.py  test_day02_b.py  test_day03_a.py  test_day03_b.py  test_day04_a.py  test_day04_b.py  test_day05_a.py  test_day05_b.py  test_day06_a.py  test_day06_b.py  test_day07_a.py  test_day07_b.py  test_day08_a.py  test_day08_b.py  test_day09_a.py  test_day09_b.py  test_day10_a.py  test_day10_b.py  test_day11_a.py  test_day11_b.py  test_day12_a.py  test_day12_b.py  test_day13_a.py  test_day13_b.py  test_day14_a.py  test_day14_b.py  test_day15_a.py  test_day15_b.py  test_day16_a.py  test_day16_b.py  test_day17_a.py  test_infi.py  test_intcode.py
tests/adventofcode2020/: test_day01_a.py  test_day01_b.py  test_day02_a.py  test_day02_b.py  test_day03_a.py  test_day03_b.py  test_day04_a.py  test_day04_b.py  test_day05_a.py  test_day05_b.py  test_day06_a.py  test_day06_b.py  test_day07_a.py  test_day07_b.py  test_day08_a.py  test_day08_b.py  test_day09_a.py  test_day09_b.py  test_day10_a.py  test_day10_b.py  test_day11_a.py  test_day11_b.py  test_day12_a.py  test_day12_b.py  test_day13_a.py  test_day13_b.py  test_day14_a.py  test_day14_b.py  test_day15_a.py  test_day16_a.py  test_day16_b.py
tests/adventofcode2021/: test_day01_a.py  test_day01_b.py  test_day02_a.py  test_day02_b.py  test_day03_a.py  test_day03_b.py  test_day04_a.py  test_day04_b.py  test_day05_a.py  test_day05_b.py  test_day06_a.py  test_day06_b.py  test_day07_a.py  test_day07_b.py  test_day08_a.py  test_day08_b.py  test_day09_a.py  test_day09_b.py  test_day10_a.py  test_day10_b.py  test_day11_a.py  test_day11_b.py  test_day12_a.py  test_day12_b.py  test_day13_a.py  test_day13_b.py  test_day14_a.py  test_day14_b.py  test_day15_a.py  test_day15_b.py  test_day16_a.py  test_day16_b.py  test_day17_a.py  test_day17_b.py  test_day18_a.py  test_day18_b.py  test_day19_a.py  test_day19_b.py  test_day20_a.py  test_day20_b.py  (+4 more)
tests/adventofcode2022/: test_day01_a.py  test_day01_b.py  test_day02_a.py  test_day02_b.py  test_day03_a.py  test_day03_b.py  test_day04_a.py  test_day04_b.py  test_day05_a.py  test_day05_b.py  test_day06_a.py  test_day06_b.py  test_day07_a.py  test_day07_b.py  test_day08_a.py  test_day08_b.py  test_day09_a.py  test_day09_b.py  test_day10_a.py  test_day10_b.py  test_day11_a.py  test_day11_b.py  test_day12_a.py  test_day12_b.py  test_day13_a.py  test_day13_b.py  test_day14_a.py  test_day14_b.py  (+8 more)
(+218 files in other folders)
