[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "Advent of Code - Roel Adriaans"
authors = ["Roel Adriaans <roel@adriaans.org>"]
license = "MIT"

packages = [
    { include = "adventofcode", from="src" },
    { include = "adventofcode2016", from="src" },
    { include = "adventofcode2018", from="src" },
    { include = "adventofcode2019", from="src" },
    { include = "adventofcode2020", from="src" },
    { include = "adventofcode2021", from="src" },
    { include = "adventofcode2022", from="src" },
    { include = "adventofcode2023", from="src" },
    { include = "adventofcode2024", from="src" },
    { include = "adventofcodedata", from="src" }
]

[tool.poetry.dependencies]
python = "^3.12"
anytree = "^2.13.0"
click = "^8.2.1"
requests = "^2.32.4"
beautifulsoup4 = "^4.13.4"
tqdm = "^4.67.1"
attrs = "^25.3.0"
numpy = "^2.3.0"
adventofcodeutils = {git = "https://github.com/RoelAdriaans/adventofcodeutils.git"}
more-itertools = "^10.7.0"
regex-spm = "^1.0.0"
parse = "^1.20.2"
matplotlib = "^3.10.7"

[tool.poetry.dev-dependencies]
black = "^25.1.0"
cookiecutter = "^2.6.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-xdist = "^3.7.0"
python-dotenv = "^1.1.0"
tox = "^4.27.0"
pre-commit = "^4.2.0"
isort = "^7.0.0"

[tool.poetry.scripts]
adventofcode = "adventofcode.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["template"]

[tool.bandit.assert_used]
skips = ["*/*_test.py", "*/test_*.py"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov --cov-report=term --cov-report=html --cov-report=xml  --ignore=template -m 'not slow' --strict-markers"

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.black]
force-exclude = '''
/(
\.git
| \.mypy_cache
| \.venv
| _build
| build
| dist
| template
)/
'''

[tool.isort]
extend_skip = ["template"]
profile = "black"
