[project]
name = "adventofcode"
version = "0.1.0"
description = "Advent of Code - Roel Adriaans"
authors = [{ name = "Roel Adriaans", email = "roel@adriaans.org" }]
requires-python = ">=3.12,<3.14"
license = "MIT"
dependencies = [
    "anytree>=2.13.0,<3",
    "click>=8.2.1,<9",
    "requests>=2.32.5,<3",
    "beautifulsoup4>=4.14.2,<5",
    "tqdm>=4.67.1,<5",
    "attrs>=25.3.0,<26",
    "numpy>=2.3.4,<3",
    "more-itertools>=10.8.0,<11",
    "regex-spm>=1.0.0,<2",
    "parse>=1.20.2,<2",
    "matplotlib>=3.10.3,<4",
    "adventofcodeutils",
]

[project.scripts]
adventofcode = "adventofcode.main:main"

[dependency-groups]
dev = [
    "black>=25.9.0,<26",
    "cookiecutter>=2.6.0,<3",
    "pytest>=8.4.2,<10",
    "pytest-cov>=7.0.0,<8",
    "pytest-xdist>=3.8.0,<4",
    "python-dotenv>=1.2.1,<2",
    "tox>=4.32.0,<5",
    "pre-commit>=4.3.0,<5",
    "isort>=7.0.0,<8",
    "flake8>=7.3.0",
    "pep8-naming>=0.15.1",
    "bandit>=1.8.6",
    "tox-uv>=1.29.0",
]

[tool.uv]

[tool.uv.sources]
adventofcodeutils = { git = "https://github.com/RoelAdriaans/adventofcodeutils" }

[tool.hatch.build.targets.sdist]
include = [
    "src/adventofcode",
    "src/adventofcode2016",
    "src/adventofcode2018",
    "src/adventofcode2019",
    "src/adventofcode2020",
    "src/adventofcode2021",
    "src/adventofcode2022",
    "src/adventofcode2023",
    "src/adventofcode2024",
    "src/adventofcodedata",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/adventofcode",
    "src/adventofcode2016",
    "src/adventofcode2018",
    "src/adventofcode2019",
    "src/adventofcode2020",
    "src/adventofcode2021",
    "src/adventofcode2022",
    "src/adventofcode2023",
    "src/adventofcode2024",
    "src/adventofcodedata",
]

[tool.hatch.build.targets.wheel.sources]
"src/adventofcode" = "adventofcode"
"src/adventofcode2016" = "adventofcode2016"
"src/adventofcode2018" = "adventofcode2018"
"src/adventofcode2019" = "adventofcode2019"
"src/adventofcode2020" = "adventofcode2020"
"src/adventofcode2021" = "adventofcode2021"
"src/adventofcode2022" = "adventofcode2022"
"src/adventofcode2023" = "adventofcode2023"
"src/adventofcode2024" = "adventofcode2024"
"src/adventofcodedata" = "adventofcodedata"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bandit]
exclude_dirs = ["template"]

[tool.bandit.assert_used]
skips = ["*/*_test.py", "*/test_*.py"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov --cov-report=term --cov-report=html --cov-report=xml  --ignore=template -m 'not slow' --strict-markers"

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.black]
force-exclude = '''
/(
\.git
| \.mypy_cache
| \.venv
| _build
| build
| dist
| template
)/
'''

[tool.isort]
extend_skip = ["template"]
profile = "black"
